# video-gen

./: README.md  pyproject.toml
config/: services.example.toml  services.toml
src/video_gen/: __init__.py  config.py
src/video_gen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/video_gen/api/: server.py
src/video_gen/cli/: __init__.py  moana.py
src/video_gen/providers/: __init__.py  dashscope_ambience.py  dashscope_music.py  deepseek_client.py  doubao_client.py  freesound.py  mubert.py  openai_client.py  xunfei.py
src/video_gen/services/: task_manager.py
src/video_gen/workflow/: models.py  orchestrator.py
src/video_gen/workflow/agents/: base.py  dummy.py  production.py
tests/: test_config.py  test_openai_client.py  test_orchestrator.py
