[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-gen"
version = "0.1.0"
description = "AI-driven workflow for generating historical figure videos"
authors = [{name = "AI"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn>=0.27",
    "openai>=1.14",
    "httpx>=0.27",
    "typing-extensions==4.9.0",
    "tomli; python_version < '3.11'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

